# DG

./: .buildinfo  CMakeLists.txt  README.md  architecture.html  examples.html  genindex.html  getting_started.html  index.html  introduction.html  models.html  objects.inv  outlook.html  search.html  searchindex.js  usage.html
.github/workflows/: documentation.yml
_sources/: architecture.rst  examples.rst  getting_started.rst  index.rst  introduction.rst  models.rst  outlook.rst  usage.rst
docs/source/: conf.py
examples/: CMakeLists.txt  convergence.cpp  linear_adv.cpp  shock_tube.cpp
src/: DG.hpp
src/core/: array.hpp  basis.hpp  matrix.hpp  quadrature.hpp  types.hpp  vector.hpp
src/driver/: driver.hpp
src/integrator/: cell.hpp  fluxSolver.hpp  integrator.hpp  timeSolver.hpp
src/mesh/: line.hpp  mesh.hpp  quad.hpp  triangle.hpp
src/model/: euler.hpp  model.hpp
src/scene/: boundary.hpp  scene.hpp
tests/: CMakeLists.txt  algebra.cpp
vis/: convergence.py  exact.csv  plot.py
